--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,17 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-    --primary: #fe2c55;
-
+    --primary                     : #fe2c55;
+    --text-color                  : #222;
     //Default layout
     --default-layout-header-height: 60px;
     --default-layout-width        : 1150px;
+
 }
 
 * {
     margin    : 0;
     padding   : 0;
     box-sizing: border-box;
+
 }
 
 html {
@@ -21,8 +23,21 @@ html {
 }
 
 body {
-    font-family   : 'Poppins', sans-serif;
-    font-size     : 1.6rem;
-    line-height   : 1.5;
-    text-rendering: optimizeSpeed;
+    font-family           : 'Poppins', sans-serif;
+    font-size             : 1.6rem;
+    line-height           : 1.5;
+    text-rendering        : optimizeSpeed;
+    -webkit-font-smoothing: antialiased;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border : none;
+}
+
+a[href] {
+    color          : var(--text-color);
+    text-decoration: none;
 }
