--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,93 @@
 .wrapper {
-    width          : 100%;
-    height         : var(--default-layout-header-height);
-    box-shadow     : 0px 1px 1px rgb(0 0 0 /12%);
-    display        : flex;
-    justify-content: center;
+    --search-border-radius: 92px;
+    --search-height       : 46px;
+    --search-top-spacer   : 9px;
+    --search-button-width : 52px;
+    width                 : 100%;
+    height                : var(--default-layout-header-height);
+    box-shadow            : 0px 1px 1px rgb(0 0 0 /12%);
+    display               : flex;
+    justify-content       : center;
 }
 
 .inner {
-    height: 100%;
-    width : var(--default-layout-width);
+    height         : 100%;
+    width          : var(--default-layout-width);
+    display        : flex;
+    align-items    : center;
+    justify-content: space-between;
+}
+
+.clear-btn {
+    opacity: 0.4;
+}
+
+.logo {}
+
+.search {
+    position        : relative;
+    width           : 361px;
+    height          : var(--search-height);
+    padding-left    : 16px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius   : var(--search-border-radius);
+    display         : flex;
+    border          : 1px solid transparent;
+
+    input {
+        height          : 100%;
+        flex            : 1;
+        color           : black;
+        font-size       : 1.6rem;
+        background-color: transparent;
+        caret-color     : var(--primary);
+    }
+
+    input:not(:placeholder-shown)~.search-btn {
+        color: rgba(22, 24, 35, 0.75);
+    }
+
+    &::after {
+        content         : '';
+        position        : absolute;
+        height          : calc(var(--search-height) - var(--search-top-spacer) * 2);
+        width           : 1px;
+        background-color: rgba(22, 24, 35, 0.12);
+        top             : var(--search-top-spacer);
+        right           : var(--search-button-width);
+
+    }
+
+    &:focus-within {
+        border-color : rgba(22, 24, 35, 0.2);
+        border-radius: 92px;
+    }
+}
+
+.clear-btn,
+.loading {
+    position : absolute;
+    right    : calc(var(--search-button-width) + 16px);
+    top      : 50%;
+    transform: translateY(-50%);
+    color    : rgba(22, 24, 35, 0.34);
+}
+
+.search-btn {
+    border                    : none;
+    width                     : var(--search-button-width);
+    height                    : 100%;
+    border-top-right-radius   : var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size                 : 1.8rem;
+    color                     : rgba(22, 24, 34, 0.34);
+
+    &:hover {
+        cursor          : pointer;
+        background-color: rgba(22, 24, 34, 0.03);
+    }
+
+    &:active {
+        background-color: rgba(22, 24, 34, 0.06);
+    }
 }
